@@ -45,6 +45,7 @@ CWD path
 EPSV
 TYPE I
 SIZE 534
+RETR 534
 QUIT
 </protocol>
 </verify>
