@@ -19,6 +19,8 @@ works
 </data>
 
 <servercmd>
+REPLY RETR 550 the file doesn't exist
+COUNT RETR 1
 REPLY SIZE 550 Can't check for file existence
 COUNT SIZE 1
 </servercmd>
@@ -50,6 +52,7 @@ CWD path
 EPSV
 TYPE I
 SIZE 546
+RETR 546
 EPSV
 SIZE 546
 RETR 546
